# aoc_2021

./: Cargo.toml
data/a01/: input.txt:Zone.Identifier
src/: aoc2021.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs
