[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1part1"
src = "src/bin/day1/day1part1.rs"

[[bin]]
name = "day1part2"
src = "src/bin/day1/day1part2.rs"



[dependencies]
