[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "aoc2021"
# src = "src/main.rs"


[lib]
name = "lib_aoc2021"
path = "src/aoc2021.rs"


[dependencies]
structopt = "0.3.25"
